Allow sloppy underlines (>=3 characters)
This avoids problems with counting unicode glyphs and negative
side-effects seem very unlikely.

Closes https://github.com/karlb/smu/issues/7

--- a/README
+++ b/README
@@ -76,7 +76,7 @@ Titles
 ------
 
 Creating titles in smu is very easy. There are two different syntax styles. The
-first is underlining:
+first is underlining with at least three characters:
 
 	Heading
 	=======
