--- a/README
+++ b/README
@@ -248,7 +248,8 @@ Other interesting stuff
   	But here is  
   	one.
 
-* Text wrapped in `$` or `$$` is not processed so it can be used with MathJax
+* If built with `make math`, text wrapped in `$` or `$$` is not processed
+  so it can be used with MathJax
 
 embed HTML
 ----------
