--- a/README
+++ b/README
@@ -118,6 +118,13 @@ The resulting HTML-Code
 
 	<a href="http://s01.de/~gottox/index.cgi/proj_smu">smu - simple mark up</a></p>
 
+Images
+------
+
+Images use a syntax similar to the one for links:
+
+	![optional alt text](http://example.com/image.png)
+
 Lists
 -----
 
